Fix button alignment and will add max length to the rest of the sections

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ a:hover {
 }
 
 .max{
-  max-width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
